Closed Bug 1354715 Opened 9 years ago Closed 7 years ago

Titlebar turns gray after dictionary lookup, if we're not drawing tabs in the title bar

Categories

(Core :: Widget: Cocoa, defect, P3)

49 Branch
All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla61
Tracking Status
firefox52 --- wontfix
firefox-esr52 --- wontfix
firefox-esr60 --- wontfix
firefox53 --- wontfix
firefox54 --- wontfix
firefox55 --- wontfix
firefox56 --- wontfix
firefox57 --- wontfix
firefox64 --- verified
firefox65 --- ?
firefox66 --- verified

People

(Reporter: mstange, Assigned: mstange)

References

Details

(Keywords: regression, Whiteboard: tpi:+)

Attachments

(1 file)

Steps to reproduce: 1. Enable the titlebar for the browser window by clicking the hamburger button, choosing Customize, and clicking the Title Bar button in the bottom left corner. 2. Go to a regular website with text. 3. Use three-finger-tap on your touchpad in order to show the dictionary. This makes the titlebar turn light gray.
Attachment #8855957 - Flags: review?(spohl.mozilla.bugs) → review+
Priority: -- → P2
Whiteboard: tpi:+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Seems like a pretty minor glitch. On the other hand, it's a one-liner. I guess we could consider backporting to 54?
Flags: needinfo?(mstange)
Version: Trunk → 49 Branch
Comment on attachment 8855957 [details] Bug 1354715 - Restore the right background color. Absolutely. This code hasn't change since 49, so this patch should apply cleanly. Approval Request Comment [Feature/Bug causing the regression]: bug 1212527 [User impact if declined]: small visual glitch in a certain UI interaction [Is this code covered by automated tests?]: no [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: n/a [Is the change risky?]: no [Why is the change risky/not risky?]: one-liner [String changes made/needed]: none
Flags: needinfo?(mstange)
Attachment #8855957 - Flags: approval-mozilla-aurora?
Flags: qe-verify+
Comment on attachment 8855957 [details] Bug 1354715 - Restore the right background color. Fix a regression. Aurora54+.
Attachment #8855957 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
This patch broke the dictionary popup completely. I don't know how I missed that.
Depends on: 1361103
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Target Milestone: mozilla55 → ---
Moving to p3 because no activity for at least 1 year(s). See https://github.com/mozilla/bug-handling/blob/master/policy/triage-bugzilla.md#how-do-you-triage for more information
Priority: P2 → P3
This was fixed by bug 1335191.
Status: REOPENED → RESOLVED
Closed: 8 years ago7 years ago
Depends on: 1335191
Resolution: --- → FIXED
Target Milestone: --- → mozilla61

Verified and the bug is not reproducible on latest FF 64.0.2 and latest Nightly 66.0a1(01.11.2019) on Mac OS X 10.13.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: