Bug 1354715 - Restore the right background color. r=spohl

MozReview-Commit-ID: K7SF3rNPWUT

--HG--
extra : rebase_source : 5eb41ffdb2c115ccb29f73fd94a25a359d66346e